[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 5
testpaths = tests
addopts =
    --cov
    -m "not conformance"
markers =
    conformance: CSVW conformance test, requires internet

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = .tox

[coverage:run]
source =
    csvw
    tests

[coverage:report]
show_missing = true

