[metadata]
name = csvw
version = 3.6.1.dev0
license = Apache 2.0
license_files = LICENSE
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = Python library to work with CSVW described tabular data
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    csv
    w3c
    tabular-data
url = https://github.com/cldf/csvw
project_urls =
    Bug Tracker = https://github.com/cldf/csvw/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    attrs>=18.1
    isodate
    python-dateutil
    # Pin until fix for 2.0.0 is released (https://pypi.org/project/rfc3986/#history):
    rfc3986<2
    uritemplate>=3.0.0
    babel
    requests
    language-tags
    rdflib
    termcolor
    jsonschema
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    csvwdescribe = csvw.__main__:csvwdescribe
    csvw2json = csvw.__main__:csvw2json
    csvw2datasette = csvw.__main__:csvw2datasette
    csvwvalidate = csvw.__main__:csvwvalidate
    csvw2sqlite = csvw.__main__:csvw2sqlite
    csvw2markdown = csvw.__main__:csvw2markdown

[options.extras_require]
dev =
    flake8
    wheel
    twine
    build
test =
    frictionless
    pytest>=5
    pytest-mock
    requests-mock
    pytest-cov
docs =
    sphinx<7
    sphinx-autodoc-typehints
    sphinx-rtd-theme

[easy_install]
zip_ok = false

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 5
testpaths = tests
addopts =
    --cov
markers =
    conformance: CSVW conformance test, requires internet

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = .tox

[coverage:run]
source =
    csvw
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312, py313
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
